implement CRUD on specialty from consumer

--- a/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
@@ -3,6 +3,9 @@
         <li>
             <a routerLink="categories"><i class="fas fa-tags"></i> Categories</a>
         </li>
+        <li>
+            <a routerLink="specialists"><i class="fas fa-tags"></i> Specialists</a>
+        </li>
         <li> 
             
             <a routerLink="products"> <i class="fas fa-border-all"></i> Products</a>
