update background color navbar ,slider and table

--- a/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
@@ -3,12 +3,11 @@
         <li>
             <a routerLink="categories"><i class="fas fa-tags"></i> Categories</a>
         </li>
+        <li> 
+            <a routerLink="area"> <i class="fas fa-border-all"></i> Area</a>
+        </li>
         <li>
             <a routerLink="specialists"><i class="fas fa-tags"></i> Specialists</a>
-        </li>
-        <li> 
-            
-            <a routerLink="products"> <i class="fas fa-border-all"></i> Products</a>
         </li>
         <li> 
             <a routerLink="users"> <i class="fas fa-users"></i> Users</a>
