--- a/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.scss
+++ b/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.scss
@@ -1,12 +1,13 @@
 .dashboardSideBar{
   min-height: 100vh;
   height: 100%;
+  background-color: #0170ce!important;
   li{
     margin-bottom: 1rem;
     padding-bottom: 0.1rem;
     font-size: 1.2rem;
     a,i{
-      color: #aaa;
+      color: white;
       text-decoration: none;
     }
     &:hover{
