--- a/Angular/src/app/components/dashboard/dashboard.component.html
+++ b/Angular/src/app/components/dashboard/dashboard.component.html
@@ -6,7 +6,9 @@
       <app-dashboard-sidebar></app-dashboard-sidebar>
     </div>
     <div class="col-10">
-      <router-outlet></router-outlet>
+      <div class="dashboard">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
