--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+.dashboard{
+    .table{
+        thead{
+            th{
+                background-color: #e8f4f6;
+                color: #0170ce;
+            }
+        }
+        tbody{
+            tr:hover{
+                background-color: #e8f4f6;
+                color: #0170CF;
+            }
+                tr{
+                    td{
+                        .btn-primary:hover{
+                            color: #0170ce !important;
+                            background-color: white;
+                        }
+                        .btn-danger:hover{
+                            color: #dc3545 !important;
+                            background-color: white;
+                        }
+                    }
+                }
+        } 
+    }
+    .pagination{
+        li{
+            a:hover{
+                cursor: pointer;
+            }
+        }
+    }
+    .pageTitle{
+        color: #0170ce;
+    }
+}
