--- a/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
@@ -12,5 +12,8 @@
         <li>
             <a routerLink="SubSpecialists"><i class="fas fa-tags"></i> SubSpecialists</a>
         </li>
+        <li>
+            <a routerLink="clinicServices"><i class="fas fa-tags"></i> Clinic Services</a>
+        </li>
     </ul>
 </nav>
