--- a/Angular/src/app/components/register-doctor/register-doctor.component.html
+++ b/Angular/src/app/components/register-doctor/register-doctor.component.html
@@ -1,1 +1,7 @@
-<p>register-doctor works!</p>
+<form>
+  <div class="form-group">
+    <label for=""></label>
+    <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="">
+    <small id="emailHelpId" class="form-text text-muted">Help text</small>
+  </div>
+</form>
