change color button and text

--- a/Angular/src/app/components/_reusableComponents/upload/upload.component.html
+++ b/Angular/src/app/components/_reusableComponents/upload/upload.component.html
@@ -1,7 +1,8 @@
 <div class="row" style="margin-bottom:15px;">
   <div class="col-md-3">
-    <input type="file" #file placeholder="Choose file" (change)="uploadFile(file.files)" style="display:none;">
-    <button type="button" class="btn btn-success" (click)="file.click()">Upload File</button>
+    <input type="file" #file placeholder="Choose file" (change)="uploadFile(file.files)" accept="image/*"
+      style="display:none;">
+    <button type="button" class="btn btn-primary" (click)="file.click()">Upload Image</button>
   </div>
   <div class="col-md-4">
     <span class="upload" *ngIf="progress > 0">
@@ -11,4 +12,5 @@
       {{message}}
     </span>
   </div>
+
 </div>
