--- a/Angular/src/app/components/dashboard/doctor-attachments/doctor-attachments.component.html
+++ b/Angular/src/app/components/dashboard/doctor-attachments/doctor-attachments.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center display-4 font-weight-bold my-5">Doctor Attachments</h2>
+<h2 class="text-center display-4 font-weight-bold my-5"> Binding Doctor Attachments</h2>
 <label class="h6 mr-2">Status:</label>
 
 <select class="form-control w-25 mb-3 d-inline-block" #status (change)="StatusChanged(status.value)">
@@ -38,8 +38,10 @@
          
     
             <td>
-                <button class="btn btn-success mx-2" (click)="openAcceptAttachmentModal(attachment.DoctorId)" data-toggle="modal"  data-target="#confirmationModal">Accept</button>
-                <button class="btn btn-danger mx-2" (click)="openDeleteCategoryModal(cat.id)" data-toggle="modal" data-target="#confirmationModal">Regect</button>
+               
+                <button class="btn btn-success mx-2" (click)="openAcceptAttachmentModal(attachment.doctorId)" data-toggle="modal"  data-target="#confirmationModal" >Accept</button>
+                <button class="btn btn-danger mx-2" (click)="openRejectAttachmentModal(attachment.doctorId)" data-toggle="modal"  data-target="#confirmationModal" >Reject</button>
+              
             </td>
         </tr>
     </tbody>
