Client header design

--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -1,1 +1,20 @@
-<p>client-header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container">
+    <a class="navbar-brand" routerLink="">
+      <img src="assets/images/whitelogowithdotcom.jpg" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link signUp border" routerLink="register">Sign up</a>
+        <a class="nav-item nav-link border-right" href="#">Login</a>
+        <a class="nav-item nav-link border-right" href="#">Vezeeta for doctors</a>
+        <a class="nav-item nav-link border-right" href="#">Contact us</a>
+        <a class="nav-item nav-link" href="#">عربي</a>
+      </div>
+    </div>
+  </div>
+</nav>
