--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{font-family: SourceSansPro !important;}
+*{
+    transition: all 0.2s ease-in-out;
+}
 .dashboard{
     .table{
         thead{
