--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -9,9 +9,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link mr-5" href="#">Dashboard</a>
         <a class="nav-item nav-link signUp border" routerLink="register">Sign up</a>
         <a class="nav-item nav-link border-right" href="#">Login</a>
-        <a class="nav-item nav-link border-right" href="#">Vezeeta for doctors</a>
+        <a class="nav-item nav-link border-right" routerLink="registerDoctor">Vezeeta for doctors</a>
         <a class="nav-item nav-link border-right" href="#">Contact us</a>
         <a class="nav-item nav-link" href="#">عربي</a>
       </div>
