--- a/Angular/src/app/components/register-doctor/register-doctor.component.scss
+++ b/Angular/src/app/components/register-doctor/register-doctor.component.scss
@@ -1,4 +1,35 @@
+.card{ 
+   border-radius: 11px;
+   overflow: hidden;
+  }
 .imgWrapper{
   max-width: 8rem;
   max-height: 6rem;
+}
+.card-header{
+  font-size: 16px;
+  background-color: rgb(0, 112, 205);
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 4px 0px;
+}
+.inputWrapper{
+  max-width: 90%;
+  min-width: 60%;
+}
+.form-group{
+  overflow: hidden;
+}
+.alreadyRegistered{
+  width: 70%;
+  color: rgb(116, 116, 112);
+  border-top: 1px solid rgb(116, 116, 112);
+  font-weight: 600;
+  text-align: center;
+  padding-top: 1rem;
+  margin: 2rem auto;
+  a{ 
+    border-bottom: 2px solid #dc3545;
+    &:hover{text-decoration: none;}
+  }
 }
