--- a/Angular/src/app/components/dashboard/sub-speciality/sub-speciality.component.html
+++ b/Angular/src/app/components/dashboard/sub-speciality/sub-speciality.component.html
@@ -1,9 +1,19 @@
 
 <h2 class="text-center display-4 font-weight-bold my-5 pageTitle">SubSpecialists</h2>
 
-<button class="btn btn-primary mb-2 dBAddNewBtn" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openAddSubSpecialtyModal();">
-  New
-</button>
+
+<div class="d-flex justify-content-between mb-2" style="align-items: center;">
+    <button type="button" class="btn btn-primary dBAddNewBtn" data-toggle="modal" data-target="#addAndUpdateModel"
+    (click)="openAddSubSpecialtyModal()">
+        New SubSpecail
+    </button>
+    <select class=" w-auto form-control" (change)="switchState($event.target.value)">
+        <option value="accept">Accepted SubSpecail</option>
+        <option value="notAccept">Not Accepted SubSpecail</option>
+        
+    </select>
+</div>
+
 
 <table class="table table-bordered table-hover" *ngIf="hasSubSpecialities">
     <thead>
@@ -22,9 +32,11 @@
            
             <td>
                 <button class="btn btn-success mx-2" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openUpdateSubSpecialtyyModal(Subspcial.id)">Update</button>
-                <button class="btn btn-danger mx-2" (click)="openDeleteSubSpecialtyModal(Subspcial.id)" data-toggle="modal" data-target="#deleteModel">Delete</button>
+                <!-- <button class="btn btn-danger mx-2" (click)="openDeleteSubSpecialtyModal(Subspcial.id)" data-toggle="modal" data-target="#deleteModel">Delete</button> -->
                 <button class="btn btn-primary mx-2" *ngIf="!Subspcial.byAdmin;" (click)="AcceptSubSpecial(Subspcial.id)">Accept</button>
-
+                <button class="btn btn-danger mx-2" (click)="openConfirmDelete(Subspcial.id)" data-toggle="modal" data-target="#deleteModel">
+                    Delete
+                </button>
             </td>
             <td>{{Subspcial.byAdmin}}</td>
         </tr>
@@ -35,13 +47,13 @@
     <div class="d-inline-block">
         <ul class="pagination">
             <li class="page-item" [ngClass]="{disabled:currentPageNumber <=1, cursorNotAllowed:currentPageNumber <=1}">
-                <button class="page-link" [disabled]="currentPageNumber <=1" (click)="getSelectedPage(currentPageNumber-1)">Previous</button>
+                <button class="page-link" [disabled]="currentPageNumber <=1" (click)="pageChange(currentPageNumber-1)">Previous</button>
             </li>
             <li class="page-item" *ngFor='let x of counter(numberOfPages) ;let i = index' [class.active]="currentPageNumber == (i+1)">
-                <a class="page-link" (click)="getSelectedPage(i+1)">{{i+1}} </a>
+                <a class="page-link" (click)="pageChange(i+1)">{{i+1}} </a>
             </li>
             <li class="page-item" [ngClass]="{disabled:currentPageNumber >=numberOfPages, cursorNotAllowed:currentPageNumber >=numberOfPages}">
-                <button class="page-link" [disabled]="currentPageNumber >= numberOfPages" (click)="getSelectedPage(currentPageNumber+1)">Next</button>
+                <button class="page-link" [disabled]="currentPageNumber >= numberOfPages" (click)="pageChange(currentPageNumber+1)">Next</button>
             </li>
         </ul>
     </div>
@@ -65,8 +77,6 @@
           <span aria-hidden="true">&times;</span>
         </button>
             </div>
-            <!-- [formGroup]="categoryForm" -->
-            <!-- [formGroup]="SubspecialityForm" -->
             
             <form [formGroup]="SubspecialityForm">
                 <div class="modal-body">
@@ -93,4 +103,27 @@
         </div>
     </div>
 </div>
- <app-confirm-modal></app-confirm-modal> 
+ <!-- <app-confirm-modal></app-confirm-modal>  -->
+ <div class="modal fade" id="deleteModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Delete SubSpecial</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure to delete this SubSpecail</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeConfirmDelete()" #modalConfirmCloseBtn>
+                    Close
+                </button>
+                <button type="submit" class="btn btn-primary"  (click)="confirmDelete()"> Confirm </button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  
